Changelog
=========

1.0.2 (unreleased)
------------------

- Nothing changed yet.


1.0.1 (2014-07-10)
------------------

- #10385 Fix events pagination cache [deroiste]


1.0 (unknown)
----------------

- Package created using templer
  []